# spiderlightning

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  bindings.rs  build.rs  install.ps1  install.sh  wc_config.toml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  release.yml
c-wit-gen/: kv-filesystem.go  kv.h
crates/azure-blob/: Cargo.toml
crates/blob-azure-blob/: Cargo.toml
crates/blob-filesystem/: Cargo.toml
crates/blob-store/: Cargo.toml
crates/blob-store/src/: container.rs  lib.rs  read_stream.rs  write_stream.rs
crates/blob-store/src/implementors/: aws_s3.rs  azblob.rs  mod.rs
crates/common/: Cargo.toml
crates/common/src/: context.rs  lib.rs  state.rs
crates/common/src/wasmtime_runtime/: builder.rs  linker.rs  mod.rs
crates/configs/: Cargo.toml
crates/configs/src/: lib.rs
crates/configs/src/providers/: envvars.rs  mod.rs  usersecrets.rs
crates/core/: Cargo.toml
crates/core/src/: interface_parser.rs  lib.rs  secret.rs  slightfile.rs  wasm_parser.rs
crates/distributed-locking/: Cargo.toml  README.md
crates/distributed-locking/src/: lib.rs
crates/distributed-locking/src/implementors/: etcd.rs  mod.rs
crates/distributed-locking/src/providers/: etcd.rs  mod.rs
crates/events/: Cargo.toml  gen_main.rs
crates/events-api/: Cargo.toml
crates/events-api/src/: lib.rs
crates/events/src/: lib.rs
crates/gpio/: Cargo.toml  README.md
crates/gpio/src/: lib.rs  tests.rs
crates/gpio/src/implementors/: mod.rs  raspberry_pi.rs
crates/http/: Cargo.toml  gen_main.rs
crates/http-api/: Cargo.toml  gen_main.rs
crates/http-api/src/: lib.rs
crates/http-client/: Cargo.toml
crates/http-client/src/: lib.rs
crates/http-handler-macro/: Cargo.toml
crates/http-handler-macro/src/: lib.rs
crates/http-server/: Cargo.toml
crates/http-server-macro/: Cargo.toml
crates/http-server-macro/src/: lib.rs
crates/http-server/src/: lib.rs
crates/http/src/: lib.rs
crates/keyvalue/: Cargo.toml
crates/keyvalue/src/: lib.rs
crates/keyvalue/src/implementors/: awsdynamodb.rs  azblob.rs  dapr.rs  filesystem.rs  mod.rs  redis.rs
crates/keyvalue/src/providers/: azure.rs  mod.rs
crates/kv/: Cargo.toml
crates/kv-azure-blob/: Cargo.toml
crates/kv-azure-blob/src/: azure.rs  lib.rs
crates/kv-dispatcher/: Cargo.toml
crates/kv-dispatcher/src/: lib.rs
crates/kv-filesystem/: Cargo.toml
crates/kv-filesystem/src/: lib.rs
crates/kv-fs/: Cargo.toml
crates/kv-fs/src/: lib.rs
crates/kv/src/: lib.rs
crates/kv/src/clouds/: azure.rs  mod.rs
crates/kv/src/implementors/: awsdynamodb.rs  azblob.rs  filesystem.rs  mod.rs  redis.rs
crates/kv/src/providers/: azblob.rs  azure.rs  filesystem.rs
crates/lockd/: Cargo.toml
crates/lockd-etcd/: Cargo.toml  README.md
crates/lockd-etcd/src/: etcd.rs  lib.rs
crates/lockd/src/: lib.rs
crates/lockd/src/implementors/: etcd.rs
crates/messaging/: Cargo.toml
crates/messaging/src/: lib.rs
crates/messaging/src/implementors/: apache_kafka.rs  azsbus.rs  filesystem.rs  mod.rs  mosquitto.rs  natsio.rs
crates/messaging/src/providers/: azure.rs  confluent.rs  fs.rs  mod.rs
crates/mq/: Cargo.toml
crates/mq-azure-servicebus/: Cargo.toml
crates/mq-azure-servicebus/src/: azure.rs  lib.rs
crates/mq-filesystem/: Cargo.toml
crates/mq-filesystem/src/: lib.rs
crates/mq/src/: lib.rs
crates/mq/src/clouds/: azure.rs
crates/mq/src/implementors/: azsbus.rs  filesystem.rs
crates/mq/src/providers/: azsbus.rs  azure.rs  filesystem.rs  mod.rs
crates/pubsub-confluent-kafka/: Cargo.toml
crates/pubsub-confluent-kafka/src/: confluent.rs  lib.rs
docs/: design-principles.md  primer.md  pubsub-background.md  pubsub-design.md  reactive.md  service-implementation-101.md  slightfile-design.md
examples/: Cargo.toml  README.md
proposals/: proposal-template.md  pubsub-interface-proposal.md  pubsub-mq-interfaces-proposal.md  slightfile-v0.2.0-proposal.md
slight/: Cargo.toml
slight/src/: cli.rs  lib.rs  main.rs
slight/src/commands/: add.rs  mod.rs  new.rs  run.rs  secret.rs
spiderlightning-cli/: Cargo.toml
src/: cli.rs  constants.rs  lib.rs  main.rs  slightfile.rs  wc_config.rs
tests/: Cargo.toml  azblob.toml  build.rs  common.rs  integration.rs  integration_test.rs  kv_test.rs  test.rs  test.txt  test_demos.rs
tests/blob-store-test/: Cargo.toml  az_blob.toml  blob_s3.toml
tests/blob-store-test/src/: main.rs
tests/configs-test/: Cargo.toml  azapp_slightfile.toml  envvars_slightfile.toml  us_slightfile.toml  usersecrets_slightfile.toml
tests/configs-test/src/: main.rs
tests/filesystem-access-test/: Cargo.toml  slightfile.toml
tests/filesystem-access-test/src/: main.rs
tests/http-test/: Cargo.toml  slightfile.toml
tests/http-test/src/: lib.rs  main.rs
tests/io-test/: Cargo.toml  slightfile.toml
tests/io-test/src/: main.rs
tests/keyvalue-test/: Cargo.toml  keyvalue_awsdynamodb_slightfile.toml  keyvalue_azblob_slightfile.toml  keyvalue_filesystem_slightfile.toml  keyvalue_redis_slightfile.toml
tests/keyvalue-test/src/: main.rs
tests/kv-test/: Cargo.toml  azblobkv.toml  filekv.toml  kvawsdynamodb_slightfile.toml  kvazblob_slightfile.toml  kvfilesystem_slightfile.toml  kvredis_slightfile.toml
tests/kv-test/src/: main.rs
tests/messaging-test/: Cargo.toml  consumer.toml  messaging.slightfile.toml
tests/messaging-test/src/: lib.rs  main.rs
tests/src/: lib.rs  main.rs
tests/state_store-test/: Cargo.toml  slightfile-azblob.toml  slightfile-filesystem.toml
tests/state_store-test/src/: main.rs
tests/wildcard-test/: Cargo.toml  slightfile.toml
tests/wildcard-test/src/: lib.rs
wit/: blob-store.wit  blob-types.wit  blob.wit  config.wit  configs.wit  distributed-locking.wit  event-handler.wit  events.wit  gpio.wit  http-client.wit  http-handler.wit  http-server.wit  http-types.wit  http.wit  keyvalue.wit  kv-2.wit  kv.wit  lockd.wit  messaging.wit  mq.wit  pubsub.wit  resources.wit  sql.wit  state_store.wit  types.wit
(+265 files in other folders)
