[workspace.package]
version = "0.3.1"
authors = ["DeisLabs Engineering Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/deislabs/spiderlightning"


[workspace.dependencies]
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", tag = "v0.2.0", features = ["async"] }
wit-error-rs = { git = "https://github.com/danbugs/wit-error-rs", rev = "05362f1a4a3a9dc6a1de39195e06d2d5d6491a5e" }
wasmtime = "0.39"
wasmtime-wasi = "0.39"
wasi-common = "0.39"
wasi-cap-std-sync = "0.39"
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }

[workspace]
members = [
    "slight",
    "crates/core",
    "crates/keyvalue",
    "crates/distributed-locking",
    "crates/http-server",
    "crates/http-client",
    "crates/http-api",
    "crates/http-handler-macro",
    "crates/messaging",
    "crates/runtime",
    "crates/runtime-configs",
    "crates/common",
    "crates/sql",
    "tests"
]
