[package]
name = "slight"
version = "0.2.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "slight"
test = false

[lib]
name = "slight_lib"
path = "src/lib.rs"

[dependencies]
spiderlightning = { path = "../" }
slight-runtime = { path = "../crates/runtime" }
slight-keyvalue = { path = "../crates/keyvalue" }
slight-distributed-locking = { path = "../crates/distributed-locking" }
slight-messaging = { path = "../crates/messaging" }
slight-runtime-configs = { path = "../crates/runtime-configs" }
slight-common = { path = "../crates/common" }
slight-http = { path = "../crates/http" }
slight-http-outbound = { path = "../crates/http-outbound" }
anyhow = { workspace = true }
env_logger = "0.9"
log = { version = "0.4", default-features = false }
tokio = { version = "1", features = ["full"] }
wit-bindgen-wasmtime = { workspace = true }
clap = { version = "3", features = ["derive"] }
toml = "0.5"
as-any = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = { version = "0.1", features = ["log"] }
reqwest = "0.11"
flate2 = "1"
tar = "0.4"

[dev-dependencies]
tempdir = "0.3"