[package]
name = "slight"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "slight"
test = false

[lib]
name = "slight_lib"
path = "src/lib.rs"

[dependencies]
slight-core = { workspace = true }
slight-runtime = { workspace = true }
slight-keyvalue = { workspace = true, features = ["filesystem", "awsdynamodb", "redis", "azblob"], optional = true}
slight-distributed-locking = { workspace = true, features = ["etcd"], optional = true}
slight-messaging = { workspace = true, features = ["filesystem", "mosquitto", "azsbus"], optional = true}
slight-runtime-configs = { workspace = true, optional = true }
slight-common = { workspace = true }
slight-sql = { workspace = true, features = ["postgres"], optional = true }
slight-http-server = { workspace = true, optional = true }
slight-http-client = { workspace = true, optional = true }
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
wit-bindgen-wasmtime = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
clap = { version = "4", features = ["derive"] }
as-any = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = "0.11"
flate2 = "1"
tar = "0.4"

[dev-dependencies]
tempdir = { workspace = true}

[features]
default = ["keyvalue", "distributed-locking", "messaging", "runtime-configs", "sql", "http-server", "http-client"]
keyvalue = ["dep:slight-keyvalue"]
distributed-locking = ["dep:slight-distributed-locking"]
messaging = ["dep:slight-messaging"]
runtime-configs = ["dep:slight-runtime-configs"]
sql = ["dep:slight-sql"]
http-server = ["dep:slight-http-server"]
http-client = ["dep:slight-http-client"]
