[package]
name = "slight-integration-tests"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
doctest = false

[dependencies]

[dev-dependencies]
hyper = { workspace = true, features = ["full"] }
tokio = { workspace = true }
anyhow = { workspace = true }
mosquitto-rs = { version = "0.4.0", features = ["vendored-openssl", "vendored-mosquitto"] }
tempdir = { workspace = true }

[target.'cfg(unix)'.dev-dependencies]
signal-child = "1"
