[package]
name = "slight-common"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
test = false
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slight-events-api = { path = "../events-api" }
slight-http-api = { path = "../http-api/" }
as-any = "0.3"
wasmtime = { workspace = true, optional = true }
anyhow = { workspace = true }
async-trait = { workspace = true }

[features]
default = ["wasmtime"]