[package]
name = "slight-common"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
test = false
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slight-file = { workspace = true }
slight-http-api = { workspace = true }
as-any = { workspace = true }
wasmtime = { workspace = true, optional = true }
anyhow = { workspace = true }
async-trait = { workspace = true }

[features]
default = ["wasmtime"]