[package]
name = "slight-core"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
doctest = false

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
short-crypt = "1"
rand = "0.8"
toml = "0.5"

[dev-dependencies]
tempdir = "0.3"