[package]
name = "slight-core"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
short-crypt = "1"
rand = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
semver = { workspace = true }
slight-file = { workspace = true }

[dev-dependencies]
tempdir = { workspace = true }