[package]
name = "slight-distributed-locking"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
test = false
doctest = false

[dependencies]
wit-bindgen-wasmtime = { workspace = true }
wit-error-rs = { workspace = true }
slight-common = { workspace = true }
slight-runtime-configs = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
# lockd.etcd deps
etcd-client = { version = "0.10", optional = true }

[features]
default = ["etcd"]
etcd = ["etcd-client"]