[package]
name = "slight-events-api"
version = "0.1.0"
edition = "2021"
authors = [ "DeisLabs Engineering Team" ]

[lib]
test = false
doctest = false

[dependencies]
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "a79a4be33d76ddf62839ba71602c26a96610ef7c" }
cloudevents-sdk = { version = "0.5.0" }
crossbeam-channel = "0.5.5"
anyhow = "1"