[package]
name = "slight-events-api"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
test = false
doctest = false

[dependencies]
wit-bindgen-wasmtime = { workspace = true }
cloudevents-sdk = { version = "0.5" }
crossbeam-channel = "0.5"
anyhow = { workspace = true }
