[package]
name = "slight-events"
version = "0.1.0"
edition = "2021"
authors = ["DeisLabs Engineering Team"]

[lib]
test = false
doctest = false

[dependencies]
wasmtime = "0.39"
anyhow = "1"
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", tag = "v0.2.0", features = ["async"]}
slight-common = { path = "../common" }
slight-events-api = { path = "../events-api" }
url = "2.2"
wit-error-rs = { git = "https://github.com/danbugs/wit-error-rs", rev = "05362f1a4a3a9dc6a1de39195e06d2d5d6491a5e" }
crossbeam-utils = "0.8"
crossbeam-channel = "0.5"
tracing = { version = "0.1", features = ["log"] }
uuid = { version = "1.1", features = ["v4"] }
futures = "0.3"
async-trait = "0.1"