[package]
name = "slight-events"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }

[lib]
test = false
doctest = false

[dependencies]
wasmtime = { workspace = true }
anyhow = { workspace = true }
wit-bindgen-wasmtime = { workspace = true }
slight-common = { path = "../common" }
slight-events-api = { path = "../events-api" }
url = "2.2"
wit-error-rs = { workspace = true }
crossbeam-utils = "0.8"
crossbeam-channel = "0.5"
tracing = { version = "0.1", features = ["log"] }
uuid = { version = "1.1", features = ["v4"] }
futures = "0.3"
async-trait = { workspace = true }