[package]
name = "slight-http-api"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }

[lib]
doctest = false

[dependencies]
wasmtime = { workspace = true }
wit-bindgen-wasmtime = { git = "https://github.com/Mossaka/wit-bindgen", rev = "6f80d65a483fe929a79e2661825d99842227b146", features = ["async"]}
wit-error-rs = { workspace = true }
hyper = "0.14"
anyhow = { workspace = true }
async-trait = { workspace = true }
[dev-dependencies]
tokio = { version = "1.4", features = ["full"] }
