[package]
name = "slight-http-api"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
doctest = false

[dependencies]
wasmtime = { workspace = true }
wit-bindgen-wasmtime = { git = "https://github.com/Mossaka/wit-bindgen", rev = "6f80d65a483fe929a79e2661825d99842227b146", features = ["async"]}
wit-error-rs = { workspace = true }
hyper = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
[dev-dependencies]
tokio = { workspace = true }
