[package]
name = "slight-http-api"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
doctest = false

[dependencies]
wasmtime = { workspace = true }
wit-bindgen-wasmtime = { git = "https://github.com/mossaka/wit-bindgen", branch = "backport-http-server", features = ["async"]}
wit-error-rs = { workspace = true }
hyper = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
[dev-dependencies]
tokio = { workspace = true }
