[package]
name = "slight-http-client"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
wit-bindgen-wasmtime = { workspace = true }
wit-error-rs = { workspace = true }
slight-common = { path = "../common" }
reqwest = { version = "0.11" }