[package]
name = "slight-http-handler-macro"
version = "0.1.0"
edition = "2021"
authors = ["DeisLabs Engineering Team"]

[lib]
proc-macro = true
doctest = false

[dependencies]
anyhow = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
wit-bindgen-gen-rust-wasm = { git = "https://github.com/bytecodealliance/wit-bindgen", tag = "v0.2.0" }
wit-bindgen-gen-core = { git = "https://github.com/bytecodealliance/wit-bindgen", tag = "v0.2.0" }
