[package]
name = "slight-http-handler-macro"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
proc-macro = true
doctest = false

[dependencies]
anyhow = { workspace = true }
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
wit-bindgen-gen-rust-wasm = { git = "https://github.com/bytecodealliance/wit-bindgen", tag = "v0.2.0" }
wit-bindgen-gen-core = { git = "https://github.com/bytecodealliance/wit-bindgen", tag = "v0.2.0" }
