[package]
name = "slight-http-server"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
wit-bindgen-wasmtime = { git = "https://github.com/mossaka/wit-bindgen", branch = "backport-http-server" }
url = { workspace = true }
wit-error-rs = { workspace = true }
routerify = "3"
routerify-cors = "3"
crossbeam-utils = "0.8"
crossbeam-channel = "0.5"
hyper = { workspace = true }
futures = "0.3"
tokio = { workspace = true }
tracing = { workspace = true }
slight-http-api = { workspace = true }
slight-common = { workspace = true }
