[package]
name = "slight-http"
version = "0.1.0"
edition = "2021"
authors = ["DeisLabs Engineering Team"]

[lib]
doctest = false

[dependencies]
wasmtime = "0.39"
anyhow = "1"
wit-bindgen-wasmtime = { git = "https://github.com/Mossaka/wit-bindgen", rev = "f7734c4c5c306bd8f0c047bb4eba782c5cdbc416" }
url = "2.2"
wit-error-rs = { git = "https://github.com/danbugs/wit-error-rs", rev = "05362f1a4a3a9dc6a1de39195e06d2d5d6491a5e" }
routerify = "3"
crossbeam-utils = "0.8"
crossbeam-channel = "0.5"
slight-events-api = { path = "../events-api" }
hyper = "0.14"
futures = "0.3"
tokio = { version = "1.18", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
slight-http-api = { path = "../http-api" }
slight-common = { path = "../common" }