[package]
name = "slight-http"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
wit-bindgen-wasmtime = { git = "https://github.com/Mossaka/wit-bindgen", rev = "6f80d65a483fe929a79e2661825d99842227b146" }
url = "2.2"
wit-error-rs = { workspace = true }
routerify = "3"
routerify-cors = "3"
crossbeam-utils = "0.8"
crossbeam-channel = "0.5"
hyper = "0.14"
futures = "0.3"
tokio = { workspace = true }
tracing = { workspace = true }
slight-http-api = { path = "../http-api" }
slight-common = { path = "../common" }
