[package]
name = "slight-keyvalue"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
test = false
doctest = false

[dependencies]
wit-bindgen-wasmtime = { workspace = true }
wit-error-rs = { workspace = true }
slight-common = { workspace = true }
slight-runtime-configs = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
# kv.azblob deps
azure_storage_blobs = { version = "0.10", optional = true }
azure_storage = { version = "0.10", optional = true }
bytes = { version = "1", optional = true }
futures = { version = "0.3", optional = true }
# keyvalue.filesystem deps
serde_json = { version = "1", optional = true }
# kv.awsdynamodb deps
aws-config = { version = "0.51", optional = true }
aws-sdk-dynamodb = { version = "0.21", optional = true }
# kv.redis deps
redis = { version = "0.22", optional = true }

[features]
default = ["filesystem"]
filesystem = ["serde_json"]
azblob = ["azure_storage_blobs", "azure_storage", "bytes", "futures"]
awsdynamodb = ["aws-config", "aws-sdk-dynamodb"]
redis = ["dep:redis"]
