[package]
name = "kv-azure-blob"
version = "0.1.0"
edition = "2021"
authors = ["DeisLabs Engineering Team"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen" }
azure_storage_blobs = "0.2"
azure_storage = "0.2"
azure_core = "0.2"
bytes = "1"
futures = "0.3"
