[package]
name = "kv-azure-blob"
version = "0.1.0"
edition = "2021"
authors = ["DeisLabs Engineering Team"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "a79a4be33d76ddf62839ba71602c26a96610ef7c" }
azure_storage_blobs = "0.2"
azure_storage = "0.2"
azure_core = "0.2"
bytes = "1"
futures = "0.3"
runtime = { path = "../runtime" }
proc_macro_utils = { path = "../proc_macro_utils" }
uuid = "1"
wit-error-rs = { git = "https://github.com/danbugs/wit-error-rs", rev = "05362f1a4a3a9dc6a1de39195e06d2d5d6491a5e" }
crossbeam-channel = "0.5.5"
events-api = { path = "../events-api" }
