[package]
name = "kv-dispatcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen" }
runtime = { path = "../runtime" }
url = "2.2"
kv-azure-blob = { path = "../kv-azure-blob" }
kv-filesystem = { path = "../kv-filesystem" }
