[package]
name = "kv-filesystem"
version = "0.1.0"
edition = "2021"
authors = ["DeisLabs Engineering Team"]

[lib]
test = false
doctest = false

[dependencies]
anyhow = "1.0"
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "a79a4be33d76ddf62839ba71602c26a96610ef7c" }
runtime = { path = "../runtime" }
proc_macro_utils = { path = "../proc_macro_utils" }
uuid = { version = "1.1.2", features = ["v4"] }
wit-error-rs = { git = "https://github.com/danbugs/wit-error-rs", rev = "05362f1a4a3a9dc6a1de39195e06d2d5d6491a5e" }
notify = "5.0.0-pre.15"
crossbeam-channel = "0.5.5"
events-api = { path = "../events-api" }
chrono = "0.4.19"
serde_json = "^1.0"
tracing = { version = "0.1", features = ["log"] }
