[package]
name = "kv-fs"
version = "0.1.0"
edition = "2021"
authors = [ "DeisLabs engineering team" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow           = "1.0"
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen" }
