[package]
name = "slight-kv"
version = "0.1.0"
edition = "2021"
authors = ["DeisLabs Engineering Team"]

[lib]
test = false
doctest = false

[dependencies]
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "a79a4be33d76ddf62839ba71602c26a96610ef7c" }
wit-error-rs = { git = "https://github.com/danbugs/wit-error-rs", rev = "05362f1a4a3a9dc6a1de39195e06d2d5d6491a5e" }
slight-events-api = { path = "../events-api" }
slight-runtime = { path = "../runtime" }
slight-runtime-configs = { path = "../runtime-configs" }
anyhow = "1"
uuid = "1"
crossbeam-channel = "0.5"
tracing = { version = "0.1", features = ["log"] }
# kv.azblob deps
azure_storage_blobs = "0.4"
azure_storage = "0.4"
azure_core = "0.3"
bytes = "1"
futures = "0.3"
# kv.filesystem deps
notify = "5.0.0-pre.15"
chrono = "0.4"
serde_json = "1"
# kv.awsdynamodb deps
aws-config = "0.46"
aws-sdk-dynamodb = "0.16"
