[package]
name = "slight-kv"
version = "0.1.0"
edition = "2021"
authors = ["DeisLabs Engineering Team"]

[lib]
test = false
doctest = false

[dependencies]
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", tag = "v0.2.0", features = ["async"]}
wit-error-rs = { git = "https://github.com/danbugs/wit-error-rs", rev = "05362f1a4a3a9dc6a1de39195e06d2d5d6491a5e" }
slight-events-api = { path = "../events-api" }
slight-common ={ path = "../common" }
slight-runtime-configs = { path = "../runtime-configs" }
anyhow = "1"
uuid = { version = "1.1", features = ["v4"] }
crossbeam-channel = "0.5"
tracing = { version = "0.1", features = ["log"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
# kv.azblob deps
azure_storage_blobs = "0.5"
azure_storage = "0.5"
azure_core = "0.4"
bytes = "1"
futures = "0.3"
# kv.filesystem deps
notify = "5.0.0-pre.15"
chrono = "0.4"
serde_json = "1"
# kv.awsdynamodb deps
aws-config = "0.46"
aws-sdk-dynamodb = "0.16"
# kv.redis deps
redis = "0.21"