[package]
name = "slight-kv"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
test = false
doctest = false

[dependencies]
wit-bindgen-wasmtime = { workspace = true }
wit-error-rs = { workspace = true }
slight-common ={ path = "../common" }
slight-runtime-configs = { path = "../runtime-configs" }
anyhow = { workspace = true }
tracing = { version = "0.1", features = ["log"] }
tokio = { version = "1", features = ["full"] }
async-trait = { workspace = true }
# kv.azblob deps
azure_storage_blobs = "0.5"
azure_storage = "0.5"
azure_core = "0.4"
bytes = "1"
futures = "0.3"
# kv.filesystem deps
serde_json = "1"
# kv.awsdynamodb deps
aws-config = "0.46"
aws-sdk-dynamodb = "0.16"
# kv.redis deps
redis = "0.21"