[package]
name = "lockd-etcd"
version = "0.1.0"
edition = "2021"
authors = ["DeisLabs Engineering Team"]

[lib]
test = false
doctest = false

[dependencies]
etcd-client = "0.9"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
url = "2.2"
runtime = { path = "../runtime" }
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "a79a4be33d76ddf62839ba71602c26a96610ef7c" }
futures = "0.3"
uuid = "1"
wit-error-rs = { git = "https://github.com/danbugs/wit-error-rs", rev = "05362f1a4a3a9dc6a1de39195e06d2d5d6491a5e" }
crossbeam-channel = "0.5.5"
events-api = { path = "../events-api" }
runtime-configs = { path = "../runtime-configs" }